--- a/app/views/ruby/conversiones.html.erb
+++ b/app/views/ruby/conversiones.html.erb
@@ -3,8 +3,8 @@
   <a name="mezclando" class="anchor" href="#mezclando"><span class="mini-icon mini-icon-link"></span></a>Mezclando</h1>
 
 <p>Hemos revisado distintos tipos de objetos (<%= link_to "números", :controller => :ruby, :action => :numeros %>
-  y <%= link_to "texto", :controller => :tut:rubyction => :textos %>)
-  y hemos hecho que <%= link_to "variables", :controller => :tutoria:rubyn => :variables %>
+  y <%= link_to "texto", :controller => :ruby, action => :textos %>)
+  y hemos hecho que <%= link_to "variables", :controller => :tutorial, :ruby => :variables %>
   apunten a ellos; lo que queremos hacer después es que funcionen todos juntos.</p>
 
 <p>Hemos visto que si queremos que un programa imprima <code>25</code>, lo que sigue <strong><em>no</em></strong>
