--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,34 @@
-<h1 class="featurette-divider">Pagina en mantenimiento</h1>
-<p>Ya volvemos dentro de unos momentos</p>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+    <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="item active">
+
+      <%= image_tag 'bg/bg-archea.jpg' %>
+      <div class="container">
+        <div class="carousel-caption">
+
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'bg/bg-segno.jpg' %>
+      <div class="container">
+        <div class="carousel-caption">
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'bg/bg-goodssolutions.jpg' %>
+      <div class="container">
+        <div class="carousel-caption">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
