--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -32,3 +32,81 @@
     </div>
   </div>
 </div>
+<hr>
+<footer class="content-info" role="contentinfo">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-sm-5">
+        <h5>IverlandthCopr Design
+          <small>Web &amp; Graphic Design Agency</small>
+        </h5>
+        <p><a href='http://twitter.com/iverlandth' target="_blank">@iverlandth</a></p>
+
+        <div id="fb-root"></div>
+        <script>(function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
+        <div class="fb-like" data-href="https://iverlandth.herokuapp.com/" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true" data-font="segoe ui" data-colorscheme="light"></div>
+        <br/>
+        <br/>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://iverlandth.herokuapp.com/" data-via="iverlandth" data-lang="es" data-related="iverlandth" data-hashtags="ror">Twittear</a>
+        <script>!function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (!d.getElementById(id)) {
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "//platform.twitter.com/widgets.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }
+        }(document, "script", "twitter-wjs");</script>
+        <!-- Place this tag where you want the +1 button to render. -->
+        <br/>
+
+        <div class="g-plusone" data-size="medium" data-annotation="inline" data-width="300" data-href="https://iverlandth.herokuapp.com/"></div>
+
+        <!-- Place this tag after the last +1 button tag. -->
+        <script type="text/javascript">
+            window.___gcfg = {lang: 'es-419'};
+
+            (function () {
+                var po = document.createElement('script');
+                po.type = 'text/javascript';
+                po.async = true;
+                po.src = 'https://apis.google.com/js/plusone.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(po, s);
+            })();
+        </script>
+
+      </div>
+      <div class="col-sm-5">
+
+        <h5>From the Blog<sup>Rd</sup></h5>
+        <a href="#">Wearable technologies:
+          revolutionary tools and ludicrous gadgets</a>
+
+        <p>The recent technological history has accustomed us to witness epochal changes that arise quietly and soon
+          invade our lives, changing …
+          <a href="#">Continued</a>
+        </p>
+
+      </div>
+      <div class="col-sm-2 hidden-xs">
+        <%= image_tag "meeting.gif", :class => "slogan pull-right", :width => "170", :height => "180" %>
+      </div>
+    </div>
+
+    <hr>
+    <div class="pull-right">
+      <p class="copyright"><a href="#">Privacy and legal notes</a> - © 2014 IverlandthCopr Design</p>
+    </div>
+
+  </div>
+</footer>
